Update README and documentation to include GitHub repository links and improve clarity on issue reporting

--- a/手順書.md
+++ b/手順書.md
@@ -1,5 +1,7 @@
 # Google ドライブ フォルダ監視システム セットアップ手順書
 
+**GitHubリポジトリ**: https://github.com/itoksk/drive-app
+
 ## 📖 目次
 
 1. [事前準備](#事前準備)
@@ -339,7 +341,7 @@ function enableDriveAPI() {
 
 不具合報告や質問がある場合は、以下までご連絡ください：
 
-- GitHubのIssues
+- [GitHubのIssues](https://github.com/itoksk/drive-app/issues)
 - 元のnote記事のコメント: https://note.com/tyaperujp01/n/n66ac3a2dfe32
 
 ---
