--- a/改善点まとめ.md
+++ b/改善点まとめ.md
@@ -173,6 +173,7 @@
 
 ## 📚 参考資料
 
+- [GitHubリポジトリ](https://github.com/itoksk/drive-app)
 - [Google Apps Script 公式ドキュメント](https://developers.google.com/apps-script)
 - [Drive API ドキュメント](https://developers.google.com/drive/api)
 - [元の記事（note）](https://note.com/tyaperujp01/n/n66ac3a2dfe32)
