Enhance folder handling by linking folder IDs to sheet names to prevent duplicates, improve error handling, and optimize performance. Update README to reflect new features and usage instructions.

--- a/コメント返信例.md
+++ b/コメント返信例.md
@@ -3,23 +3,22 @@
 ## おかゆさんへの返信（2024年11月21日）
 
 ```
-おかゆさん、コメントありがとうございます！
+おかゆさん、コメントありがとうございます。ご不便をおかけしました。
 
-「フォルダIDが無効です」というエラーについて、改善版を作成しました。
+「フォルダIDが無効です」エラーの原因は、共有ドライブとURLの扱いにありました。
+改善版では次の対応をしています：
+- 共有ドライブ対応（Drive API使用）
+- URLからのフォルダID抽出を強化（複数パターン対応）
 
-主な原因は以下の通りです：
-1. 共有ドライブのフォルダの場合、Drive APIの有効化が必要
-2. URLからフォルダIDを抽出する処理が不十分だった
+以下の手順でお試しください：
+1. 最新版の`Code.gs`に置き換える
+2. Apps Scriptの「サービス」からDrive APIを追加
+3. `checkNewFiles`を手動実行して確認
 
-改善版では以下の対応を行いました：
-- 共有ドライブ対応を追加（Drive API使用）
-- URL処理の改善（複数のURLパターンに対応）
-- フォルダIDの直接入力にも対応
+改善版のコードと手順書はGitHubに公開しています：
+https://github.com/（リポジトリURL）
 
-改善版のコードと手順書をGitHubに公開しましたので、ぜひお試しください。
-https://github.com/itoksk/drive-app
-
-もし問題が解決しない場合は、お知らせください。
+もし解決しない場合は、G列のエラーメッセージと実行ログ（「表示」→「ログ」）の内容を教えていただけると助かります。
 ```
 
 ---
@@ -27,22 +26,23 @@ https://github.com/itoksk/drive-app
 ## のりさんへの返信（2025年2月24日）
 
 ```
-のりさん、コメントありがとうございます！
+のりさん、コメントありがとうございます。ご報告とアイデア、とても参考になりました。
 
-共有ドライブでの動作について、改善版を作成しました。
-
-ご指摘の通り、マイドライブと共有ドライブでフォルダの取り扱い方が異なります。
-改善版では、Drive APIを使用して共有ドライブのフォルダにも対応できるようにしました。
-
-主な改善点：
-- Drive APIを使用した共有ドライブ対応
-- URLからフォルダIDを正しく抽出する処理の改善
+共有ドライブで動作しない件について、改善版を用意しました。
+主な改善点は以下のとおりです：
+- 共有ドライブ対応（Drive API使用）
+- URL/IDの取り扱い改善
 - エラーハンドリングの強化
 
-改善版のコードと詳細な手順書をGitHubに公開しましたので、ぜひお試しください。
-https://github.com/itoksk/drive-app
+お手数ですが、以下の流れでお試しください：
+1. 最新版の`Code.gs`に更新
+2. Drive APIを有効化
+3. `checkNewFiles`を手動実行
 
-チャットスペースでの活用、素晴らしいアイデアですね！
+改善版のコードと手順書はこちらです：
+https://github.com/（リポジトリURL）
+
+もしまだ動作しない場合は、G列のエラー内容と実行ログをご共有ください。原因を特定して追加対応します。
 ```
 
 ---
@@ -50,23 +50,19 @@ https://github.com/itoksk/drive-app
 ## ka2moruさんへの返信（2025年5月13日）
 
 ```
-ka2moruさん、コメントありがとうございます！
+ka2moruさん、コメントありがとうございます。ご指摘の症状を確認しました。
 
-ご指摘の通り、URLではなくフォルダIDを直接入力すると動作する問題について、改善版を作成しました。
-
-原因は、URLからフォルダIDを抽出する処理が不十分だったことです。
-改善版では、以下のパターンに対応しました：
+URLを貼ってもエラーになる原因は、フォルダIDの抽出処理が不足していたことでした。
+改善版では以下に対応しています：
 - 標準パターン: https://drive.google.com/drive/folders/ID
 - パラメータパターン: https://drive.google.com/drive/?id=ID
 - ハッシュパターン: https://drive.google.com/drive/#folders/ID
 - フォルダIDのみ: ID（直接入力）
 
-また、手順書も更新し、URLとフォルダIDの両方の入力方法を明記しました。
+最新版の`Code.gs`と手順書をGitHubに公開しています：
+https://github.com/（リポジトリURL）
 
-改善版のコードと手順書をGitHubに公開しましたので、ぜひお試しください。
-https://github.com/itoksk/drive-app
-
-ご指摘ありがとうございました！
+お試しいただき、もし解決しない場合はエラーメッセージと実行ログを教えてください。すぐ確認します。
 ```
 
 ---
@@ -74,26 +70,24 @@ https://github.com/itoksk/drive-app
 ## smoothie doseさんへの返信（2026年2月3日）
 
 ```
-smoothie doseさん、コメントありがとうございます！
+smoothie doseさん、コメントありがとうございます。ご不便をおかけしました。
 
-シートが作成されない問題について、改善版を作成しました。
+シートが作成されない件について、原因を整理し改善版を作成しました。
+主な原因は以下の通りです：
+1. シート名に使用できない文字の扱いが不十分
+2. シート名の長さ制限（31文字）への未対応
+3. 同名シートがある場合の処理不足
 
-原因は以下の通りです：
-1. シート名に使用できない文字が含まれている場合の処理が不十分
-2. シート名の長さ制限（31文字）への対応が不十分
-3. 同名シートが存在する場合の処理が不十分
+改善版では以下を対応しています：
+- 使用できない文字を自動で`_`に置換
+- 31文字を超える場合は自動で切り詰め
+- 同名シートがある場合は自動リネーム
+- フォルダIDとシート名を紐付け、重複作成を防止
 
-改善版では以下の対応を行いました：
-- シート名に使用できない文字を自動的に`_`に置換
-- シート名が31文字を超える場合は自動的に切り詰め
-- 同名シートが存在する場合は自動的に番号を付加
+改善版のコードと手順書はこちらです：
+https://github.com/（リポジトリURL）
 
-また、エラーハンドリングを強化し、シート作成失敗時の詳細なログ出力を追加しました。
-
-改善版のコードと詳細な手順書をGitHubに公開しましたので、ぜひお試しください。
-https://github.com/itoksk/drive-app
-
-もし問題が解決しない場合は、Apps Scriptのログ（「表示」→「ログ」）を確認していただき、エラーメッセージを教えていただければ、さらにサポートできます。
+もし解決しない場合は、G列のエラー内容と実行ログ（「表示」→「ログ」）をご共有ください。
 ```
 
 ---
@@ -101,7 +95,7 @@ https://github.com/itoksk/drive-app
 ## 共通の返信テンプレート
 
 ```
-（ユーザー名）さん、コメントありがとうございます！
+（ユーザー名）さん、コメントありがとうございます。ご不便をおかけしました。
 
 ご報告いただいた不具合について、改善版を作成しました。
 
@@ -115,10 +109,10 @@ https://github.com/itoksk/drive-app
 - エラーハンドリングの強化
 - パフォーマンス改善
 
-改善版のコードと詳細な手順書をGitHubに公開しましたので、ぜひお試しください。
-https://github.com/itoksk/drive-app
+改善版のコードと手順書をGitHubに公開しています：
+https://github.com/（リポジトリURL）
 
-もし問題が解決しない場合は、お知らせください。
+もし解決しない場合は、G列のエラー内容と実行ログ（「表示」→「ログ」）をご共有ください。状況を確認して対応します。
 ```
 
 ---
@@ -128,18 +122,19 @@ https://github.com/itoksk/drive-app
 ```
 【2026年2月3日 更新】
 
-コメントでご報告いただいた不具合について、改善版を作成しました！
+コメントでご報告いただいた不具合について、改善版を作成しました。
 
 【主な改善点】
 1. 共有ドライブ対応を追加（Drive API使用）
 2. URL処理の改善（複数のURLパターンに対応、フォルダIDの直接入力も可能）
 3. シート作成処理の改善（使用できない文字の自動置換、長さ制限への対応）
-4. エラーハンドリングの強化（エラーメッセージをスプレッドシートに記録）
-5. パフォーマンス改善（バッチ処理による高速化）
+4. シート名の重複作成を防止（フォルダIDで紐付け）
+5. エラーハンドリングの強化（エラーメッセージをスプレッドシートに記録）
+6. パフォーマンス改善（バッチ処理による高速化）
 
 改善版のコードと詳細な手順書をGitHubに公開しました：
-https://github.com/itoksk/drive-app
+https://github.com/（リポジトリURL）
 
-ご報告いただいた皆様、ありがとうございました！
+ご報告いただいた皆様、ありがとうございました。
 今後も不具合や改善提案があれば、お気軽にコメントください。
 ```
