--- a/手順書.md
+++ b/手順書.md
@@ -311,6 +311,15 @@ function enableDriveAPI() {
 - 実行頻度を下げる
 - 不要なファイルを削除する
 
+### 問題6: シートが重複して作成される
+
+#### 原因: フォルダ名に使用できない文字が含まれている／同名フォルダがある
+
+**対処法：**
+- 最新版の`Code.gs`を使用しているか確認
+- 最新版ではフォルダIDでシートを紐付けるため、重複作成は基本的に発生しません
+- 既に重複シートがある場合は、不要なシートを削除してください
+
 ---
 
 ## よくある質問（FAQ）
@@ -355,6 +364,7 @@ function enableDriveAPI() {
 - シート作成処理の改善
 - エラーハンドリングの強化
 - パフォーマンス改善
+- シート名の重複防止（フォルダIDで紐付け）
 
 ---
 
