--- a/改善点まとめ.md
+++ b/改善点まとめ.md
@@ -69,9 +69,28 @@
 
 ---
 
+### 4. シートが重複作成される問題（追加）
+
+**報告内容：**
+- フォルダ名に使えない文字があると、シートが毎回増えることがある
+- 同名フォルダがある場合に意図しないシートが作られる
+
+**原因：**
+- フォルダ名とシート名の対応が固定されておらず、再実行時に別名と判定されることがある
+
+**修正内容：**
+- フォルダIDとシート名を紐付けて保存（Document Properties）
+- シートのA1にフォルダIDをノートとして記録し、再実行時に正確に同じシートを特定
+
+**使用方法：**
+- 特別な設定は不要です
+- 既に重複したシートがある場合は不要なシートを削除してください
+
+---
+
 ## 🆕 その他の改善点
 
-### 4. エラーハンドリングの強化
+### 5. エラーハンドリングの強化
 
 **改善内容：**
 - 各処理でエラーが発生した場合でも、他のフォルダの処理を継続できるように改善
@@ -84,7 +103,7 @@
 
 ---
 
-### 5. パフォーマンス改善
+### 6. パフォーマンス改善
 
 **改善内容：**
 - シートへの書き込みをバッチ処理に変更（1行ずつではなく、まとめて書き込み）
@@ -96,7 +115,7 @@
 
 ---
 
-### 6. オーナー情報の取得改善
+### 7. オーナー情報の取得改善
 
 **改善内容：**
 - `getOwnerEmail()`関数を追加し、DriveAppで取得できない場合はDrive APIを使用
@@ -115,16 +134,18 @@
 1. ❌ 共有ドライブのフォルダを監視できない
 2. ❌ URLからフォルダIDを正しく抽出できない
 3. ❌ シート名に問題がある場合、シートが作成されない
-4. ❌ エラーが発生すると処理が停止する
-5. ❌ パフォーマンスが悪い（大量のファイルがある場合）
+4. ❌ シートが重複作成される可能性がある
+5. ❌ エラーが発生すると処理が停止する
+6. ❌ パフォーマンスが悪い（大量のファイルがある場合）
 
 ### 変更後の改善点
 
 1. ✅ 共有ドライブのフォルダも監視可能（Drive API使用）
 2. ✅ 複数のURLパターンに対応、フォルダIDの直接入力も可能
 3. ✅ シート名を自動的に適切な形式に変換
-4. ✅ エラーが発生しても他の処理を継続
-5. ✅ バッチ処理によりパフォーマンス向上
+4. ✅ シート名の重複作成を防止（フォルダIDで紐付け）
+5. ✅ エラーが発生しても他の処理を継続
+6. ✅ バッチ処理によりパフォーマンス向上
 
 ---
 
