Remove outdated documentation file and update existing README with detailed explanations on preventing duplicate sheets, improved error handling, and new features related to folder ID linking. Add FAQ section for monitoring multiple folders with the same name.

--- a/手順書.md
+++ b/手順書.md
@@ -317,8 +317,12 @@ function enableDriveAPI() {
 
 **対処法：**
 - 最新版の`Code.gs`を使用しているか確認
-- 最新版ではフォルダIDでシートを紐付けるため、重複作成は基本的に発生しません
+- 最新版では以下の仕組みで重複を防止しています：
+  1. フォルダIDとシートを紐付け（シートのA1セルにフォルダIDを記録）
+  2. フォルダIDとシート名のマッピングを保存
+  3. 既存シートを検索して再利用
 - 既に重複シートがある場合は、不要なシートを削除してください
+- 削除する際は、G列にエラーが出ていないシートを残すことを推奨します
 
 ---
 
@@ -344,6 +348,10 @@ function enableDriveAPI() {
 
 **A:** Apps Scriptエディタで「表示」→「ログ」をクリックすると、実行ログを確認できます。
 
+### Q6: 同じフォルダ名のフォルダを複数監視できますか？
+
+**A:** はい、可能です。フォルダIDでシートを紐付けているため、同じフォルダ名でも別々のシートが作成されます。シート名が重複する場合は自動的に番号が付加されます（例：`フォルダ名_1`、`フォルダ名_2`）。
+
 ---
 
 ## サポート
@@ -360,11 +368,11 @@ function enableDriveAPI() {
 ### 2026年2月3日 - 改善版リリース
 
 - 共有ドライブ対応を追加
-- URL処理の改善（複数パターン対応）
-- シート作成処理の改善
-- エラーハンドリングの強化
-- パフォーマンス改善
-- シート名の重複防止（フォルダIDで紐付け）
+- URL処理の改善（複数パターン対応、フォルダIDの直接入力も可能）
+- シート作成処理の改善（使用できない文字の自動置換、長さ制限への対応）
+- エラーハンドリングの強化（エラーメッセージをスプレッドシートのG列に記録）
+- パフォーマンス改善（バッチ書き込みによる高速化）
+- シート名の重複防止（フォルダIDでシートを紐付け、既存シートを自動検出・再利用）
 
 ---
 
