Revert "コメント返信例の微修正"
This reverts commit 462d2323f2c7dc68bb0d4127a77fad36d572daa9.

--- a/コメント返信例.md
+++ b/コメント返信例.md
@@ -116,7 +116,7 @@ https://docs.google.com/spreadsheets/d/1zS9AWg4DEpIIx0w4QaDm8RBFrLdmnNCjl6YFUd7Q
 ## 共通の返信テンプレート
 
 ```
-smoothie dose さん、コメントありがとうございます。ご不便をおかけしました。
+（ユーザー名）さん、コメントありがとうございます。ご不便をおかけしました。
 
 ご報告いただいた不具合について、改善版（V2）を作成しました。
 
